Fixing nsbeta3+ bug 46190. Clicking on links that point to anchors with whitespace in them wasn't working... r=pollmann@netscape.com